Poniendo Tabs , error al acceder a una view de un fragment

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,21 +1,82 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<!-- File created by the Android Action Bar Style Generator
 
-    <style name="Lugar">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
+     Copyright (C) 2011 The Android Open Source Project
+     Copyright (C) 2012 readyState Software Ltd
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+  
+          http://www.apache.org/licenses/LICENSE-2.0
+  
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+
+<resources>
+
+    <style name="Theme.Polistyle" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="actionBarItemBackground">@drawable/selectable_background_polistyle</item>
+        <item name="popupMenuStyle">@style/PopupMenu.Polistyle</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Polistyle</item>
+        <item name="actionBarTabStyle">@style/ActionBarTabStyle.Polistyle</item>
+        <item name="actionDropDownStyle">@style/DropDownNav.Polistyle</item>
+        <item name="actionBarStyle">@style/ActionBar.Solid.Polistyle</item>
+        <item name="actionModeBackground">@drawable/cab_background_top_polistyle</item>
+        <item name="actionModeSplitBackground">@drawable/cab_background_bottom_polistyle</item>
+        <item name="actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Polistyle</item>
+
+                <!-- Light.DarkActionBar specific -->
+        <item name="actionBarWidgetTheme">@style/Theme.Polistyle.Widget</item>
+
     </style>
 
-    <style name="Cifra">
-        <item name="android:textSize">14sp</item>
+    <style name="ActionBar.Solid.Polistyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="background">@drawable/ab_solid_polistyle</item>
+        <item name="backgroundStacked">@drawable/ab_stacked_solid_polistyle</item>
+        <item name="backgroundSplit">@drawable/ab_bottom_solid_polistyle</item>
+        <item name="progressBarStyle">@style/ProgressBar.Polistyle</item>
     </style>
 
-    <style name="Texto">
-        <item name="android:textSize">14sp</item>
+    <style name="ActionBar.Transparent.Polistyle" parent="@style/Widget.AppCompat.ActionBar">
+        <item name="background">@drawable/ab_transparent_polistyle</item>
+        <item name="progressBarStyle">@style/ProgressBar.Polistyle</item>
+    </style>
+	
+    <style name="PopupMenu.Polistyle" parent="@style/Widget.AppCompat.PopupMenu">	
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_polistyle</item>	
+    </style>
+	
+    <style name="DropDownListView.Polistyle" parent="@style/Widget.AppCompat.ListView.DropDown">
+        <item name="android:listSelector">@drawable/selectable_background_polistyle</item>
     </style>
 
-    <style name="Estado">
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">14sp</item>
+    <style name="ActionBarTabStyle.Polistyle" parent="@style/Widget.AppCompat.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_polistyle</item>
+    </style>
+	
+    <style name="DropDownNav.Polistyle" parent="@style/Widget.AppCompat.Spinner.DropDown.ActionBar">
+        <item name="android:background">@drawable/spinner_background_ab_polistyle</item>
+        <item name="android:popupBackground">@drawable/menu_dropdown_panel_polistyle</item>
+        <item name="android:dropDownSelector">@drawable/selectable_background_polistyle</item>
+    </style>
+    
+    <style name="ProgressBar.Polistyle" parent="@style/Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/progress_horizontal_polistyle</item>
+    </style>
+    
+    <style name="ActionButton.CloseMode.Polistyle" parent="@style/Widget.AppCompat.ActionButton.CloseMode">
+        <item name="android:background">@drawable/btn_cab_done_polistyle</item>
+    </style>
+    
+    <!-- this style is only referenced in a Light.DarkActionBar based theme -->
+    <style name="Theme.Polistyle.Widget" parent="@style/Theme.AppCompat">
+        <item name="popupMenuStyle">@style/PopupMenu.Polistyle</item>
+        <item name="dropDownListViewStyle">@style/DropDownListView.Polistyle</item>
     </style>
 
 </resources>
