--- a/res/layout/activity_addtrip.xml
+++ b/res/layout/activity_addtrip.xml
@@ -19,231 +19,17 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin" >
 
-            <LinearLayout
+            <android.support.v4.view.ViewPager
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/viewPager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="0.61"
-                android:orientation="vertical" >
+                tools:context=".NewReminderActivity" >
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/card_background_white"
-                    android:orientation="vertical" >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/imorigen"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_origen" />
-
-                        <AutoCompleteTextView
-                            android:id="@+id/origen"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/apptheme_edit_text_holo_light"
-                            android:completionThreshold="4"
-                            android:ems="10"
-                            android:hint="Origen"
-                            android:textSize="20sp" >
-
-                            <requestFocus />
-                        </AutoCompleteTextView>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/imdestino"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_destino" />
-
-                        <AutoCompleteTextView
-                            android:id="@+id/destino"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/apptheme_edit_text_holo_light"
-                            android:completionThreshold="1"
-                            android:ems="10"
-                            android:hint="Destino"
-                            android:textSize="20sp" >
-                        </AutoCompleteTextView>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/imcalendario"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_calendario" />
-
-                        <Spinner
-                            android:id="@+id/spinnerdia"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/apptheme_spinner_background_holo_light" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/imreloj"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_clock" />
-
-                        <EditText
-                            android:id="@+id/hora"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/apptheme_edit_text_holo_light"
-                            android:completionThreshold="1"
-                            android:ems="10"
-                            android:hint="Hora salida"
-                            android:textSize="20sp" >
-                        </EditText>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/implazas"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_social_group" />
-
-                        <EditText
-                            android:id="@+id/plazas"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:background="@drawable/apptheme_edit_text_holo_light"
-                            android:ems="10"
-                            android:hint="Nºplazas"
-                            android:inputType="number"
-                            android:textSize="20sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/imprecio"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_pricetag" />
-                        <EditText
-                            android:id="@+id/precio"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:background="@drawable/apptheme_edit_text_holo_light"
-                            android:ems="10"
-                            android:hint="Precio/plaza"
-                            android:inputType="numberDecimal"
-                            android:textSize="20sp" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/imequipaje"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_ic_bag" />
-                        <Spinner
-                            android:id="@+id/spinnermaleta"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/apptheme_spinner_background_holo_light" />
-                        
-                        
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/layout_conductor"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/card_background_white"
-                    android:orientation="vertical"
-                    android:visibility="gone" >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/imconductor"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_volante" />
-
-                        <TextView
-                            android:id="@+id/conductor"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Jorge Perez"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:id="@+id/imcoche"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_car" />
-
-                        <TextView
-                            android:id="@+id/coche"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:text="Seat León"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-                </LinearLayout>
-            </LinearLayout>
+               
+            </android.support.v4.view.ViewPager>
 
             <LinearLayout
                 android:layout_width="match_parent"
