--- a/res/layout/activity_busqueda.xml
+++ b/res/layout/activity_busqueda.xml
@@ -117,6 +117,25 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/apptheme_spinner_background_holo_light" />
                 </LinearLayout>
+                
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/imfranja"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_clock" />
+
+                    <Spinner
+                        android:id="@+id/spinnerfranja"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/apptheme_spinner_background_holo_light" />
+                </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
