--- a/res/layout/fragment_creartrip_restricciones.xml
+++ b/res/layout/fragment_creartrip_restricciones.xml
@@ -82,7 +82,8 @@
         android:layout_height="wrap_content"
         android:textSize="19sp"
         android:padding="3dp"
-        android:ems="10" >
+        android:ems="10"
+        android:background="@drawable/apptheme_edit_text_holo_light" >
     </EditText>
     
 </LinearLayout>
